# AniFun

back/: .gitignore  .pylintrc  Makefile  exception_handler.py  main.py  pyproject.toml
back/src/: alembic.ini  exception_handler.py  include_router.py  middleware.py  model.py  swagger.py
back/src/app/admin/: admin_api.json  config.py  utils.py
back/src/app/admin/anime/api_v1/: router.py  schemas.py  valid.py
back/src/app/anime/: __init__.py
back/src/app/anime/catalog/api_v1/: router.py  schemas.py
back/src/app/anime/home/api_v1/: router.py  schemas.py  subquery.py
back/src/app/anime/models/v1/: __init__.py  age_restrictions.py  anime.py  genres.py  img.py  rating.py  schedule.py  season.py  status.py  (+2 more)
back/src/app/auth/: __init__.py
back/src/app/auth/api_v1/: __init__.py  router.py  schemas.py
back/src/app/user/api_v1/: router.py
back/src/celery_task/: tasks.py
back/src/celery_task/smtp/: config.py  template.py  type_email.py  utils.py
back/src/database/: config.py  session.py
back/src/migrations/: env.py
back/src/minio/: config.py  s3_client.py
back/src/minio/abc_model/: s3_client.py
back/src/redis/: config.py  name_space.py  operation.py  redis_manager.py
back/src/redis/abs_model/: redis.py
back/src/utils/: check_content_table.py  crud.py  logger.py  table.py  utils.py  valid.py
back/src/utils/abs_model/: crud.py
back/tests/: config.py  conftest.py
back/tests/test_admin/anime/api_v1/: conftest.py  test_admin.py
back/tests/test_auth/api_v1/base/: test_auth.py
back/tests/test_auth/api_v1/oauth2/: conftest.py  test_oauth2.py
(+459 files in other folders)
